@@ -1,3 +1,7 @@
+2019-03-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* c-c++-common/unroll-6.c: New test.
+
 2019-03-11  Martin Liska  <mliska@suse.cz>
 
 	Backport from mainline
