@@ -1,3 +1,9 @@
+2019-03-11  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR rtl-optimization/89588
+	* loop-unroll.c (decide_unroll_constant_iterations): Make guard for
+	explicit unrolling factor more robust.
+
 2019-03-11  Martin Liska  <mliska@suse.cz>
 
 	Backport from mainline
